パスを修正
